gitops/apps/rhcl-demo/appsets/mcp/resources/mcp-gateway-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rhcl-mcp-gw
  namespace: openshift-ingress
  labels:
    kuadrant.io/gateway: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  gatewayClassName: istio
  listeners:
    - name: http-mcp
      port: 80
      protocol: HTTP
      hostname: REPLACE_ME_MCP_HOSTNAME
      allowedRoutes:
        namespaces:
          from: All
    - name: https-mcp-public
      port: 443
      protocol: HTTPS
      hostname: REPLACE_ME_MCP_HOSTNAME
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-mcp-sandbox-tls
      allowedRoutes:
        namespaces:
          from: All
